--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,18 @@
 {
     "type": "project",
+    "name": "User API",
+    "description": "User API",
     "license": "proprietary",
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/expression-language": "^4.1",
+        "symfony/filesystem": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
@@ -21,12 +26,13 @@
         "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
         "symfony/web-link": "^4.1",
-        "symfony/yaml": "^4.1"
+        "symfony/yaml": "^4.1",
+        "validator/livr": "dev-master"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
         "symfony/dotenv": "^4.1",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.5",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "^4.1"
